@@ -1,3 +1,5 @@
+/*	$NetBSD: deflate.h,v 1.2 1996/09/13 00:30:02 cgd Exp $	*/
+
 /* deflate.h -- internal compression state
  * Copyright (C) 1995-1996 Jean-loup Gailly
  * For conditions of distribution and use, see copyright notice in zlib.h 
@@ -7,8 +9,6 @@
    part of the implementation of the compression library and is
    subject to change. Applications should only use zlib.h.
  */
-
-/* $Id: deflate.h,v 1.1.1.1 1996/09/12 15:33:09 gwr Exp $ */
 
 #ifndef _DEFLATE_H
 #define _DEFLATE_H
