@@ -1,3 +1,5 @@
+/*	$NetBSD: inftrees.h,v 1.2 1996/09/13 00:30:37 cgd Exp $	*/
+
 /* inftrees.h -- header to use inftrees.c
  * Copyright (C) 1995-1996 Mark Adler
  * For conditions of distribution and use, see copyright notice in zlib.h 
