@@ -1,3 +1,5 @@
+/*	$NetBSD: zutil.h,v 1.2 1996/09/13 00:30:51 cgd Exp $	*/
+
 /* zutil.h -- internal interface and configuration of the compression library
  * Copyright (C) 1995-1996 Jean-loup Gailly.
  * For conditions of distribution and use, see copyright notice in zlib.h
@@ -7,8 +9,6 @@
    part of the implementation of the compression library and is
    subject to change. Applications should only use zlib.h.
  */
-
-/* $Id: zutil.h,v 1.1.1.1 1996/09/12 15:33:10 gwr Exp $ */
 
 #ifndef _Z_UTIL_H
 #define _Z_UTIL_H
